--- a/src/components/helper/sidebar/style.css
+++ b/src/components/helper/sidebar/style.css
@@ -6,7 +6,11 @@
     padding-bottom: 5rem;
     background: white;
     transform: translateX(0);
-    transition: all .2s;
+    /* transition: all .2s;
+    -webkit-transition: all .2s;
+    -moz-transition: all .2s;
+    -ms-transition: all .2s;
+    -o-transition: all .2s; */
 }
 
 .sidebar-main.closed{
